--- a/index.html
+++ b/index.html
@@ -12,9 +12,59 @@
     <div class="container">
         <div class="faqCard">
             <div class="faqCard__illustration">
-                <img src="./img/illustration-box-desktop.svg" alt="orange box illustration">
-                <img src="./img/illustration-woman-online-desktop.svg" alt="women looking at computer illustration">
-                <img src="./img/bg-pattern-desktop.svg" alt="illustration hover shadow">
+                <img class="box" src="./img/illustration-box-desktop.svg" alt="orange box illustration">
+                <img class="woman" src="./img/illustration-woman-online-desktop.svg" alt="women looking at computer illustration">
+                <img class="shadow" src="./img/bg-pattern-desktop.svg" alt="illustration hover shadow">
+            </div>
+            <div class="faqCard__right">
+                <h1>FAQ</h1>
+                <div class="faqCard__questions">
+                    <div class="faqCard__question">
+                        <div class="question">
+                            <p>How many team members can I invite?</p>
+                            <img src="./img/icon-arrow-down.svg" alt="down arrow">
+                        </div>
+                        <input type="checkbox" name="" id="arrow-input">
+                        <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
+                    </div>
+                    <hr>
+                    <div class="faqCard__question">
+                        <div class="question">
+                            <p>What is the maximum file upload size?</p>
+                            <img src="./img/icon-arrow-down.svg" alt="down arrow">
+                        </div>
+                        <input type="checkbox" name="" id="arrow-input">
+                        <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
+                    </div>
+                    <hr>
+                    <div class="faqCard__question">
+                        <div class="question">
+                            <p>How do I reset my password?</p>
+                            <img src="./img/icon-arrow-down.svg" alt="down arrow">
+                        </div>
+                        <input type="checkbox" name="" id="arrow-input">
+                        <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
+                    </div>
+                    <hr>
+                    <div class="faqCard__question">
+                        <div class="question">
+                            <p>Can I cancel my subscription?</p>
+                            <img src="./img/icon-arrow-down.svg" alt="down arrow">
+                        </div>
+                        <input type="checkbox" name="" id="arrow-input">
+                        <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
+                    </div>
+                    <hr>
+                    <div class="faqCard__question">
+                        <div class="question">
+                            <p>Do you provide additonal support?</p>
+                            <img src="./img/icon-arrow-down.svg" alt="down arrow">
+                        </div>
+                        <input type="checkbox" name="" id="arrow-input">
+                        <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
+                    </div>
+                    <hr>
+                </div>
             </div>
         </div>
     </div>
