--- a/index.html
+++ b/index.html
@@ -21,46 +21,46 @@
                 <div class="faqCard__questions">
                     <div class="faqCard__question">
                         <div class="question">
-                            <p>How many team members can I invite?</p>
+                            <label for="Q1">How many team members can I invite?</label>
                             <img src="./img/icon-arrow-down.svg" alt="down arrow">
                         </div>
-                        <input type="checkbox" name="" id="arrow-input">
+                        <input type="checkbox" name="" id="Q1">
                         <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
                     </div>
                     <hr>
                     <div class="faqCard__question">
                         <div class="question">
-                            <p>What is the maximum file upload size?</p>
+                            <label for="Q2">What is the maximum file upload size?</label>
                             <img src="./img/icon-arrow-down.svg" alt="down arrow">
                         </div>
-                        <input type="checkbox" name="" id="arrow-input">
+                        <input type="checkbox" name="" id="Q2">
                         <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
                     </div>
                     <hr>
                     <div class="faqCard__question">
                         <div class="question">
-                            <p>How do I reset my password?</p>
+                            <label for="Q3">How do I reset my password?</label>
                             <img src="./img/icon-arrow-down.svg" alt="down arrow">
                         </div>
-                        <input type="checkbox" name="" id="arrow-input">
+                        <input type="checkbox" name="" id="Q3">
                         <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
                     </div>
                     <hr>
                     <div class="faqCard__question">
                         <div class="question">
-                            <p>Can I cancel my subscription?</p>
+                            <label for="Q4">Can I cancel my subscription?</label>
                             <img src="./img/icon-arrow-down.svg" alt="down arrow">
                         </div>
-                        <input type="checkbox" name="" id="arrow-input">
+                        <input type="checkbox" name="" id="Q4">
                         <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
                     </div>
                     <hr>
                     <div class="faqCard__question">
                         <div class="question">
-                            <p>Do you provide additonal support?</p>
+                            <label for="Q5">Do you provide additonal support?</label>
                             <img src="./img/icon-arrow-down.svg" alt="down arrow">
                         </div>
-                        <input type="checkbox" name="" id="arrow-input">
+                        <input type="checkbox" name="" id="Q5">
                         <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
                     </div>
                     <hr>
