--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script defer src="./app.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="faqCard">
+            <img class="box" src="./img/illustration-box-desktop.svg" alt="orange box illustration">
             <div class="faqCard__illustration">
-                <img class="box" src="./img/illustration-box-desktop.svg" alt="orange box illustration">
                 <img class="woman" src="./img/illustration-woman-online-desktop.svg" alt="women looking at computer illustration">
                 <img class="shadow" src="./img/bg-pattern-desktop.svg" alt="illustration hover shadow">
             </div>
@@ -25,7 +26,10 @@
                             <img src="./img/icon-arrow-down.svg" alt="down arrow">
                         </div>
                         <input type="checkbox" name="" id="Q1">
-                        <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
+                        <div class="answer">
+                            <p>No more than 2GB. All files in your account must fit your alloted storage space.</p>
+                        </div>
+                        
                     </div>
                     <hr>
                     <div class="faqCard__question">
