Fixed empty name attributes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <label for="Q1">How many team members can I invite?</label>
                             <img src="./img/icon-arrow-down.svg" alt="down arrow">
                         </div>
-                        <input type="checkbox" name="" id="Q1">
+                        <input type="checkbox" id="Q1">
                         <div class="answer">
                             <p>No more than 2GB. All files in your account must fit your alloted storage space.</p>
                         </div>
@@ -37,7 +37,7 @@
                             <label for="Q2">What is the maximum file upload size?</label>
                             <img src="./img/icon-arrow-down.svg" alt="down arrow">
                         </div>
-                        <input type="checkbox" name="" id="Q2">
+                        <input type="checkbox" id="Q2">
                         <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
                     </div>
                     <hr>
@@ -46,7 +46,7 @@
                             <label for="Q3">How do I reset my password?</label>
                             <img src="./img/icon-arrow-down.svg" alt="down arrow">
                         </div>
-                        <input type="checkbox" name="" id="Q3">
+                        <input type="checkbox" id="Q3">
                         <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
                     </div>
                     <hr>
@@ -55,7 +55,7 @@
                             <label for="Q4">Can I cancel my subscription?</label>
                             <img src="./img/icon-arrow-down.svg" alt="down arrow">
                         </div>
-                        <input type="checkbox" name="" id="Q4">
+                        <input type="checkbox" id="Q4">
                         <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
                     </div>
                     <hr>
@@ -64,7 +64,7 @@
                             <label for="Q5">Do you provide additonal support?</label>
                             <img src="./img/icon-arrow-down.svg" alt="down arrow">
                         </div>
-                        <input type="checkbox" name="" id="Q5">
+                        <input type="checkbox" id="Q5">
                         <p class="answer">No more than 2GB. All files in your account must fit your alloted storage space.</p>
                     </div>
                     <hr>
